fix css rules so you don't get two columns on mobile

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,15 +1,14 @@
 
-@media(min-width:768px) {
-  #content{
-      position: inherit;
-      margin: 0 0 0 250px;
-      /*padding: 0 30px;*/
-      border-left: 1px solid #e7e7e7;
-  }
+body {
+  background-color: #f8f8f8;
+}
+
+#content {
+  background-color: #ffffff
 }
 
 #middle-content {
-  width: 40%;
+  width: 100%;
   height: 100vh;
   float: left;
   border-right: 1px solid black;
@@ -25,8 +24,21 @@
 }
 
 #right-content {
-  width: 60%;
+  width: 100%;
   height: 100vh;
   overflow-y: auto;
   float: left;
+}
+
+@media(min-width:768px) {
+  #content{
+      position: inherit;
+      margin: 0 0 0 250px;
+      /*padding: 0 30px;*/
+      border-left: 1px solid #e7e7e7;
+  }
+
+  #middle-content, #right-content {
+    width: 50%;
+  }
 }
